<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="category_prompt">Choose Category</string>
    <!-- ACTION BAR-->
    <string name="ab_signOut">Sign Out</string>
    <string name="ab_settings">Settings</string>

    <!-- Login page strings -->
    <string name="app_name">DigiPA</string>
    <string name="username_input">Username: </string>
    <string name="password">Password: </string>
    <string name="button_submit">Submit</string>
    <string name="welcome">My DigiPA</string>
    <string name="action_settings">Sign Out</string>

    <string name="title_activity_landing_page">LandingPage</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to creating account -->
    <string name="register">Create an account</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_cancel_register">Cancel</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Background and text colors used throughout the app -->
    <color name="dark_background">#272822</color>
    <color name="pink">#D92672</color>
    <color name="gray">#75715E</color>
    <color name="green">#A6E22E</color>
    <color name="red">#E81919</color>
    <color name="light_blue">#78B9CF</color>
    <color name="white">#FFFFFF</color>
    <color name="light_gray">#C3C3C3</color>

    <!-- Strings for activity_month.xml -->
    <string name="title_activity_month">DigiPA</string>
    <string name="prev_month">PREV</string>
    <string name="next_month">NEXT</string>
    <string name="welcomeName">Welcome!</string>
    <string name="curr_month">OCTOBER 2014</string>
    <string name="add_task">Add Task</string>
    <string name="add_event">Add Event</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>

    <!-- Strings for activity_daily.xml -->
    <string name="title_activity_daily">Daily Schedule</string>
    <string name="events">Events</string>
    <string name="appointments">Scheduled Appointments</string>
    <string name="tasks">To Do Tasks</string>

    <!-- Strings for create_event -->
    <string name="title_create_event">Create Event</string>
    <string name="title_create_task">Create Task</string>
    <string name="title_edit_event">Edit Event</string>

    <string name="title_edit_task">Edit Task</string>

    <string name="pick_time">00:00</string>
    <string name="pick_date">Date</string>
    <string name="title_activity_create_task">CreateTask</string>
    <string name="hello_world">Hello world!</string>
    <!--dialog stuff-->
    <string name="dialog_options">Options</string>

    <string name="goBack">prev</string>
    <string name="goNext">next</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hiPri">High Priority?</string>

    <string name="facebook_app_id">1539208079629172</string>
    <string name="title_facebook_login">Facebook Login</string>

    <!-- Strings for Settings -->
    <string name="FBUNameHint">Enter Facebook Username here:</string>
    <string name="FBPasswordHint">Enter Facebook password here:</string>

</resources>
