<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.liz.digipa.Daily" >

    <item android:id="@+id/action_addEvent"
        android:title="@string/add_event"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_addTask"
        android:title="@string/add_task"
        android:orderInCategory="101"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/ab_settings"
        android:orderInCategory="102"
        android:showAsAction="never" />

    <item android:id="@+id/action_sign_out"
        android:title="@string/action_settings"
        android:orderInCategory="103"
        android:showAsAction="never" />
</menu>
