<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="5dp"
    android:background="@color/dark_background">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:textSize="30dp"
        android:text="@string/welcomeName"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

            <Button
                android:id="@+id/previousMonth"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/prev_month"
                android:textColor="@color/green">
            </Button>

            <Button
                android:id="@+id/currentMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curr_month"
                android:textColor="@color/pink">
            </Button>
            <Button
                android:id="@+id/nextMonth"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/next_month"
                android:textColor="@color/green">
            </Button>
    </LinearLayout>


    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/monthView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:gravity="start"
        android:background="@color/white"
    />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/addEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_event"
            android:layout_alignParentBottom="true"
            android:textColor="@color/green">
        </Button>

        <Button
            android:id="@+id/addTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/addEvent"
            android:text="@string/add_task"
            android:textColor="@color/green">
        </Button>

    </RelativeLayout>
 </LinearLayout>