<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_background">



    <EditText
        android:id="@+id/event_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="@color/white"/>

    <Spinner
        android:id="@+id/event_details_categories"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/event_details_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hiPri"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/event_details_descrip"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColor="@color/white"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="From"
            android:textSize="18sp"
            android:textColor="@color/pink"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            />

        <Button
            android:id="@+id/event_details_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date" />
        <Button
            android:id="@+id/event_details_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="To"
            android:textSize="18sp"
            android:textColor="@color/pink"
            android:layout_marginRight="41dp"
            android:layout_marginEnd="41dp"
            />

        <Button
            android:id="@+id/event_details_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"/>

        <Button
            android:id="@+id/event_details_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_time" />
    </LinearLayout>

    <EditText
        android:id="@+id/event_details_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Location"
        android:textColor="@color/white"/>





</LinearLayout>
