<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_background">

    <EditText
        android:id="@+id/task_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="@color/white"/>

    <FrameLayout
        android:id="@+id/task_details_category_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <CheckBox
        android:id="@+id/task_details_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hiPri"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/task_details_descrip"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_due"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Due"
            android:textSize="18sp"
            android:textColor="@color/pink"
            android:layout_marginRight="41dp"
            android:layout_marginEnd="41dp"
            />

            <Button
                android:id="@+id/task_details_due_date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Choose Date"/>
        </LinearLayout>
</LinearLayout>
