<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ET_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_task"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/pink"
            />


        <FrameLayout
            android:id="@+id/ET_details"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



        <!-- content fixated to the bottom of the screen -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/ET_cancel"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cancel"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/ET_edit"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>
